[gd_scene load_steps=2 format=3 uid="uid://dirh1n1wsgfst"]

[ext_resource type="Script" path="res://addons/quest_manager/Editor/Nodes/Quest_Rewards.gd" id="1_y2wej"]

[node name="Quest_Rewards" type="GraphNode"]
custom_minimum_size = Vector2(250, 150)
offset_right = 247.0
offset_bottom = 147.0
tooltip_text = "Quest Reward nodes are items the player receive on quest completion. 
i.e How much coins this quest rewards or
what items the player receives
"
title = "Quest Rewards"
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 2
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 3
slot/0/right_color = Color(1, 0.843137, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_y2wej")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="data" type="VBoxContainer" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="AddButton" type="MenuButton" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"
switch_on_hover = true
item_count = 6
popup/item_0/text = "String"
popup/item_0/id = 0
popup/item_1/text = "Int"
popup/item_1/id = 1
popup/item_2/text = "Float"
popup/item_2/id = 2
popup/item_3/text = "Boolean"
popup/item_3/id = 3
popup/item_4/text = "Vector2"
popup/item_4/id = 4
popup/item_5/text = "Vector3"
popup/item_5/id = 5

[node name="Types" type="Control" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="String" type="HBoxContainer" parent="Types" groups=["string"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -15.5
offset_right = 88.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="delete" type="Button" parent="Types/String"]
layout_mode = 2
text = "X"
flat = true

[node name="name" type="LineEdit" parent="Types/String"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "String Name"

[node name="data" type="LineEdit" parent="Types/String"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "String Value"

[node name="Integer" type="HBoxContainer" parent="Types" groups=["numerical"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="delete" type="Button" parent="Types/Integer"]
layout_mode = 2
text = "X"
flat = true

[node name="name" type="LineEdit" parent="Types/Integer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Integer name"

[node name="data" type="SpinBox" parent="Types/Integer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
min_value = -1e+07
max_value = 1e+07
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[node name="Float" type="HBoxContainer" parent="Types" groups=["numerical"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="delete" type="Button" parent="Types/Float"]
layout_mode = 2
text = "X"
flat = true

[node name="name" type="LineEdit" parent="Types/Float"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Float name"

[node name="data" type="SpinBox" parent="Types/Float"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
min_value = -1e+07
max_value = 1e+07
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[node name="Vector2" type="HBoxContainer" parent="Types" groups=["vector2"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="delete" type="Button" parent="Types/Vector2"]
layout_mode = 2
text = "X"
flat = true

[node name="name" type="LineEdit" parent="Types/Vector2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Vector2 name"

[node name="x" type="SpinBox" parent="Types/Vector2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.1
min_value = -1e+07
max_value = 1e+07
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[node name="y" type="SpinBox" parent="Types/Vector2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.1
min_value = -1e+07
max_value = 1e+07
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[node name="Vector3" type="HBoxContainer" parent="Types" groups=["vector3"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="delete" type="Button" parent="Types/Vector3"]
layout_mode = 2
text = "X"
flat = true

[node name="name" type="LineEdit" parent="Types/Vector3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Vector3 name"

[node name="x" type="SpinBox" parent="Types/Vector3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
min_value = -1e+07
max_value = 1e+07
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[node name="y" type="SpinBox" parent="Types/Vector3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
min_value = -1e+07
max_value = 1e+07
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[node name="z" type="SpinBox" parent="Types/Vector3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
min_value = -1e+07
max_value = 1e+07
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true

[node name="Bool" type="HBoxContainer" parent="Types" groups=["boolean"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="delete" type="Button" parent="Types/Bool"]
layout_mode = 2
text = "X"
flat = true

[node name="name" type="LineEdit" parent="Types/Bool"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Boolean name"

[node name="data" type="CheckBox" parent="Types/Bool"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
